--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AfricasTalkingPayment</string>
+    <string name="phone_number">Phone number</string>
+    <string name="start_payment">Start Payment</string>
 </resources>
